# agent-stack

./: .gitignore  pyproject.toml
docs/: struct.md
src/agent_stack/: __init__.py
src/agent_stack/apps/master/: main.py
src/agent_stack/apps/master/api/v1/: agent.py  project.py  service.py  user.py
src/agent_stack/apps/node/: main.py
src/agent_stack/apps/scheduler/: main.py
src/agent_stack/cmd/: agent_stack.py  serve.py
src/agent_stack/common/: config.py
src/agent_stack/db/: database.py  models.py
src/agent_stack/managers/: master.py  node.py  scheduler.py
