[project]
name = "agent-stack"
dynamic = ["version"]
description = "Distributed AI Agent management platform"
readme = "README.md"
authors = [
    { name = "BytemanD", email = "byteman.e@outlook.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.139.0",
    "pystonic==0.2.1",
    "rich>=15.0.0",
    "sqlmodel>=0.0.39",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "typer>=0.15.0",
    "psutil>=7.0.0",
]

[project.scripts]
agentstack = "agent_stack.cmd.agent_stack:main"
agentstack-master = "agent_stack.cmd.serve:master"
agentstack-scheduler = "agent_stack.cmd.serve:scheduler"
agentstack-node = "agent_stack.cmd.serve:node"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.15.6",
]


[build-system]
requires = ["hatchling", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.uv.sources]
pystonic = { index = "testpypi" }


[tool.hatch.version]
source = "uv-dynamic-versioning"


[tool.hatch.build.targets.wheel]
packages = ["src/agent_stack"]

[[tool.uv.index]]
name = "tencent"
url = "http://mirrors.cloud.tencent.com/pypi/simple"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true
